--- a/DoctorAppointment/DoctorAppointment.Core/DoctorAppointment.Core.csproj
+++ b/DoctorAppointment/DoctorAppointment.Core/DoctorAppointment.Core.csproj
@@ -4,4 +4,8 @@
         <TargetFramework>net7.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\DoctorAppointment.Domain\DoctorAppointment.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
