--- a/DoctorAppointment/DoctorAppointment.Domain/DoctorAppointment.Domain.csproj
+++ b/DoctorAppointment/DoctorAppointment.Domain/DoctorAppointment.Domain.csproj
@@ -8,4 +8,9 @@
       <Compile Remove="Program.cs" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AspNetCore.Identity.MongoDbCore" Version="3.1.2" />
+      <PackageReference Include="MongoDbGenericRepository" Version="1.4.8" />
+    </ItemGroup>
+
 </Project>
